--- a/Week_4_Game/index.html
+++ b/Week_4_Game/index.html
@@ -6,7 +6,7 @@
 
 <head>
 	
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="assets/css/style8.css">
 
 </head>
 
@@ -27,10 +27,11 @@
 	<!-- ___________________________________ADVERT 1 START ________________________-->	
 
 		<div id="advert">	
-			<p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p>
+			<p>ADVERTISE HERE!!!</p><br />
 		</div>
 	<!-- ___________________________________ADVERT 1 END ________________________-->
 
+	<!-- ___________________________________MAIN CONTENT ________________________-->
 
 <div id="conatiner1">
 
@@ -58,17 +59,14 @@
 
 		</div>
 
+</div><!--CONAINER 1 DIV-->
 
 	<!-- ___________________________________ADVERT 2 START ________________________-->	
 	
 		<div id="advert2">	
-			<p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p>
+			<p>ADVERTISE HERE!!!</p><br />
 		</div>
 	<!-- ___________________________________ADVERT 2 END ________________________-->
-
-
-</div><!--CONAINER 1 DIV-->
-
 
 <!--__________________________________GAME SECTION _____________________________________________________-->
 
@@ -80,7 +78,7 @@
 
 			<div id="advert3">	
 
-			<p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p>
+			<p>ADVERTISE HERE!!!</p><br />
 
 			</div>
 
@@ -101,14 +99,14 @@
 
 			<div id="advert3">	
 
-			<p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p>
+			<p>ADVERTISE HERE!!!</p>
 			
 			</div>		
 
 
 			<div id="advert4">	
 
-			<p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p>
+			<p>ADVERTISE HERE!!!</p>
 			
 			</div>	
 
@@ -153,22 +151,9 @@
 
 			<div id="advert4a">	
 
-			<p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p><br /><p>ADVERTISE HERE!!!</p>
+			<p>ADVERTISE HERE!!!</p><br />
 			
 			</div>	
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 	</div><!-- gameBov div -->
 
@@ -176,18 +161,18 @@
 
 
 
-<!--___________________________________________________________________________________________________________-->
+<!--____________________________________POP UP TESTER TEMPORARY_______________________________________________________-->
 
 
 <!-- The Button makes the pop up work, but doesn't work in function xyz(){}-->
-<button onclick="POPOPENWin()">Pop Up Tester</button>
+<!--<button onclick="POPOPENWin()">Pop Up Tester</button>-->
 
 
 <!-- Test Button for losses <button onclick="POPOPEN_LOSS()">Pop Up Tester</button>-->
 
 
 
-
+<!--___________________________________________POP UP BOX___________________________________________________-->
 <div id="modalWin">
 	
 	<div class="modalViewWin">
@@ -197,14 +182,11 @@
 				Play Again!!!
 			</div>
 
-
-				
-
-			
-
 	</div>
 	
 </div>
+<!--___________________________________________POP UP BOX___________________________________________________-->
+
 
 <!--      Code for Loss pop up
 
@@ -226,7 +208,7 @@
 
 -->
 
-
+<!--____________________________________________BOTTOM BANNER________________________________________________-->
 
 
 <div id="crystalsBottom"><img src="assets/images/crystals.jpg"></div>
